manifest/objects/LVGO__Client_Tag_Assignment__c.object
<CustomObject>
    <description>Links a Client Tag to a Client</description>
    <fields>
        <fullName>LVGO__ClientAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You must choose an Account with Account Status = Client.</errorMessage>
            <filterItems>
                <field>LVGO__Account__c.LVGO__Account_Type__c</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Client Tags (from Contract)</relationshipLabel>
        <relationshipName>Client_Tag_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__ClientTag__c</fullName>
        <label>Client Tag</label>
        <referenceTo>LVGO__Client_Tag__c</referenceTo>
        <relationshipLabel>Client Accounts</relationshipLabel>
        <relationshipName>Client_Tag_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LVGO__Contract__c</fullName>
        <description>The Contract record that is related to the Client Tag</description>
        <inlineHelpText>The Contract record that is related to the Client Tag</inlineHelpText>
        <label>Contract</label>
        <referenceTo>LVGO__Contract__c</referenceTo>
        <relationshipLabel>Client Tags</relationshipLabel>
        <relationshipName>Client_Tag_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>LV Client Tag Assignment</label>
    <listViews>
        <fullName>LVGO__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Client Tag Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LV Client Tag Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>